--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 title: 100 words review
 subtitle: Keeping it simple and spoiler free
-cover-img: /assets/img/100words.png
+cover-img: /assets/img/100words_2.jpg
 ---
 
