--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ layout: home
 title: 100 words review
 subtitle: Keeping it simple and spoiler free
 cover-img: /assets/img/100words_2.jpg
+share-img: /assets/img/100words.png
 ---
 
